# FreeCAD

src/: PathSurface.py
src/Mod/PartDesign/Gui/: TaskMultiTransformParameters.ui
src/Mod/Path/: CMakeLists.txt  InitGui.py  PathCommands.py  TestPathApp.py  change_log.txt
src/Mod/Path/Generators/: PathStrategyAdaptive.py  PathStrategyClearing.py  clearing_offset_generator.py
src/Mod/Path/Gui/Resources/: Path.qrc
src/Mod/Path/Gui/Resources/panels/: PageOpClearingEdit_ORIG.ui  PageOpFacingEdit.ui  PageOpPerimeterEdit.ui  PageOpPerimeterEdit_ORIG.ui  PageOpPocketEdit.ui  PageOpPocketFullEdit.ui  PageOpProfileEdit.ui  PageOpProfileFullEdit.ui  PageOpRotateEdit.ui  PageOpSurfaceEdit.ui  PageOpTargetShapeEdit.ui  PageRotationEdit.ui  PathEdit.ui  SetupGlobal.ui
src/Mod/Path/Path/Op/: Area.py  MillFace.py  PocketShape.py  Profile.py
src/Mod/Path/PathScripts/: PathAdaptive.py  PathAdaptiveGui.py  PathAreaOp.py  PathCircularHoleBase.py  PathCircularHoleBaseGui.py  PathCustom.py  PathCustomGui.py  PathDeburr.py  PathDeburrGui.py  PathDressupCompoundProfile.py  PathDressupDogbone.py  PathDressupHoldingTags.py  PathDressupLeadInOut.py  PathDressupPathBoundary.py  PathDrilling.py  PathEngrave.py  PathEngraveGui.py  PathFeatureAnalysis.py  PathFeatureExtensions.py  PathFeatureGroup.py  PathFeatureGroupGui.py  PathGeom.py  PathGeomSupport.py  PathGui.py  PathGuiInit.py  PathIconViewProvider.py  PathJob.py  PathJobCmd.py  PathJobDlg.py  PathJobGui.py  PathLog.py  PathMillFace.py  PathOp.py  PathOpGui.py  PathOpTools.py  PathPartAlign.py  PathPocket.py  PathPocketBase.py  PathPocketBaseGui.py  PathPocketGui.py  (+38 more)
src/Mod/Path/PathScripts/Dressups/: PathDressupAxisMap.py  PathDressupDogbone.py  PathDressupDragknife.py  PathDressupHoldingTags.py  PathDressupLeadInOut.py  PathDressupPathBoundary.py  PathDressupPathBoundaryGui.py  PathDressupRampEntry.py  PathDressupTag.py  PathDressupTagGui.py  PathDressupZCorrect.py
src/Mod/Path/PathScripts/Features/: BaseGeometryTaskPanel.py  BaseLocationTaskPanel.py  DepthsTaskPanel.py  HeightsTaskPanel.py
src/Mod/Path/PathScripts/Operations/: PathAdaptiveGui.py  PathCircularHoleBaseGui.py  PathDeburr.py  PathDeburrGui.py  PathDrilling.py  PathDrillingGui.py  PathEngrave.py  PathEngraveGui.py  PathHelix.py  PathHelixGui.py  PathMillFace.py  PathMillFaceGui.py  PathPocket.py  PathPocketBase.py  PathPocketGui.py  PathPocketShape.py  PathPocketShapeGui.py  PathProfile.py  PathProfileContour.py  PathProfileContourGui.py  PathProfileEdges.py  PathProfileEdgesGui.py  PathProfileFaces.py  PathProfileFacesGui.py  PathProfileGui.py  PathSlotGui.py  PathSurface.py  PathSurfaceGui.py  PathVcarve.py  PathVcarveGui.py  PathWaterline.py  PathWaterlineGui.py
src/Mod/Path/PathScripts/Strategies/: PathStrategyClearing.py  PathStrategyClearing_ORIG.py  PathStrategyProfile.py
src/Mod/Path/PathScripts/features/: PathFeatureExtensions.py  PathFeatureExtensionsGui.py
src/Mod/Path/PathScripts/job/: PathJobRotation.py
src/Mod/Path/PathScripts/operations/: PathClearing.py  PathClearingGui.py  PathClearing_ORIG.py  PathFacingGui.py  PathPerimeter.py  PathPerimeter_ORIG.py  PathTargetGeometryGui.py  PathTargetShapeGui.py
src/Mod/Path/PathScripts/strategies/: PathAvoidCollision.py  PathSelectionProcessing.py  PathStrategyClearing.py  PathStrategySlicing.py  PathTarget2DEnvelope.py
src/Mod/Path/PathScripts/taskpanels/: PathTaskPanel.py
src/Mod/Path/PathTests/: TestPathAdaptive.py  TestPathClearingCircularGenerator.py  TestPathClearingCircularZigZagGenerator.py  TestPathClearingLineGenerator.py  TestPathClearingOffsetGenerator.py  TestPathClearingZigZagGenerator.py  TestPathDressupDogbone.py  TestPathPocketShape.py  TestPathProfile.py  TestPathStrategies.py  test_pocketshape.fcstd
src/Mod/Path/PathUtils/: Generator_CircleZigZag.py  Generator_Offset.py  Generator_Profile.py  Generator_Spiral.py  Gui_Input.py  Macro_CombineRegions.py  Tool_Controller.py
src/Mod/PathExp/: CommandsRegistry.py  Init.py  InitGui.py  PathExpCommands.py  RUN_remove_debug_files.bat  remove_debug_files.py
src/Mod/PathExp/Features/: Alignment.py  AlignmentGui.py  PathFeatureExtensions.py
src/Mod/PathExp/FeaturesGui/: PathFeatureExtensionsGui.py
src/Mod/PathExp/Generators/: PathGeometryGenerator.py  PathStrategyAdaptive.py  PathStrategyClearing.py  PathStrategyOCL.py  PathStrategySlicing.py  PathTargetBuildUtils.py  clearing_circular_generator.py  clearing_circular_zigzag_generator.py  clearing_line_generator.py  clearing_offset_generator.py  clearing_zigzag_generator.py  drill_generator.py  drillableLib.py
src/Mod/PathExp/GuiSupport/: Gui_Input.py  PageBaseGeometryEdit.ui  PageBuildShapeEdit.ui  PageExtensionsEdit.ui  PageIndexRotationGeometryEdit.ui  PageOpAdaptiveEdit.ui  PageOpClearingEdit.ui  PageOpDrillingEdit.ui  PageOpPocketEdit.ui  PageOpProfileEdit.ui  PageRestShapeEdit.ui  PageTargetShapeEdit.ui  PreviewShape.py
src/Mod/PathExp/Macros/: Add_FromShapes_To_Job.FCMacro  Airfoil_Import_&_Scale.FCMacro  CompoundProfileUtility_V1.FCMacro  CompoundProfileUtility_V2.FCMacro  Generator_Adaptive.py  Generator_Circle.py  Generator_CircleZigZag.py  Generator_DropCut.py  Generator_Line.py  Generator_Offset.py  Generator_Profile.py  Generator_Spiral.py  Generator_Utilities.py  Generator_Utilities_old.py  Generator_ZigZag.py  Gui_ComboBox.py  Gui_Input.py  Gui_Input_Macro.FCMacro  JobUtils.py  MacroMenu.FCMacro  Macro_AlignFace_Unused.FCMacro  Macro_AlignToFeature.FCMacro  Macro_AlignToFeature.py  Macro_AlignToFeature_ORIG.FCMacro  Macro_AlignToFeature_Orig.py  Macro_CombineRegions.py  Macro_DropCut3D.FCMacro  Macro_Path_Unit_Tests.FCMacro  Macro_REST_Milling.py  Macro_Slice_Solid.py  Macro_WireUtils.py  Make_Comments_Active.FCMacro  Snip.FCMacro  Tool_Controller.py  _0_temp.FCMacro  _Load_Path_WB.FCMacro  _Macro_EdgesAndFaces_To_Regions.FCMacro  _Macro_Edges_To_Wire.FCMacro  _Macro_Inlay_V_19.FCMacro  _Macro_Inlay_V_20.FCMacro  (+9 more)
src/Mod/PathExp/Ops/: PathAdaptive - Copy.py  PathAdaptive.py  PathAreaOp.py  PathCircularHoleBase.py  PathClearing.py  PathClearing_orig.py  PathDrilling.py  (+9 more)
(+96 files in other folders)
